<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MessageActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:background="@color/colorPrimaryDark"
        android:minHeight="?actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="24dp"
        android:paddingTop="8dp"
        android:text="@string/username"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

</androidx.appcompat.widget.Toolbar>
    
    <com.google.android.material.tabs.TabLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tab_layout"
        android:background="@color/colorPrimaryDark"
        app:tabSelectedTextColor="#fff"
        app:tabIndicatorColor="#fff"
        app:tabTextColor="#fff"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom"
        />


    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="5dp"
        android:background="#fff"
        android:id="@+id/bottom"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:id="@+id/text_send"
            android:hint="@string/type_a_message"
            android:layout_toStartOf="@+id/btn_send"
            android:layout_centerVertical="true"
           />

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/btn_send"
                android:background="@drawable/ic_action_name"
                android:layout_alignParentEnd="true"
                android:contentDescription="TODO" />

    </RelativeLayout>

</RelativeLayout>

